--- a/templates/predict.html
+++ b/templates/predict.html
@@ -2,6 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h1>Home</h1>
+        <h1>Predict</h1>
+        <p>{{ predict }}</p>
     </div>
 {% endblock %}
