--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,8 +1,32 @@
-{% extends 'layout.html' %}
-
-{% block body %}
-    <div class="container">
-        <h1>Predict</h1>
-        <p>{{ predict }}</p>
+{% extends 'layout.html' %} {% block body %}
+<div class="jumbotron text-center">
+  <h1>Train Classification Model(Support Vector Machine)</h1>
+  <br>
+  <br>
+  <br>
+  <form method="POST">
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Penalty Parameter(C)</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            <option>1.0</option>
+            <option>2.0</option>
+            <option>3.0</option>
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Kernel</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            <option>RBF</option>
+            <option>Linear</option>
+          </select>
+        </div>
+      </div>
     </div>
+    <button type="submit" class="btn btn-primary">Train</button>
+  </form>
+</div>
 {% endblock %}
